[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/items/shotgun/shotgun_wielded.gd" type="Script" id=1]
[ext_resource path="res://assets/items/shotgun/shotgun_wielded.png" type="Texture" id=2]
[ext_resource path="res://assets/items/shotgun/shotgun_shot.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/items/shotgun/shotgun_reload.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.0521, 10 )

[node name="shotgun_wielded" type="Area2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="bullet_shoot" type="Position2D" parent="sprite"]
position = Vector2( 21, 0 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( -2.02481, -0.0131402 )
scale = Vector2( 1.78304, 0.424791 )
shape = SubResource( 1 )
disabled = true

[node name="timer_reload" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="sound_shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="sound_reload" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="timer_reload" to="." method="_on_timer_reload_timeout"]
